# llm-false-positive-filtering

./: README.md  config.py  data_prepping_all_facts_from_openai.py  data_prepping_from_openai.py  dataset.py  fine_tuning_training_data.jsonl  finetuning.py  finetuning_codellama.py  finetuning_codellama_with_reasoning.py  guidance.json  langchain-player.py  langchain_player_falcon40b.py  llm_triage.py  manually_label_batch.py  prepare-codeql-tests.sh  prompts.py  repository_manager.py  requirements.txt  tags  test.py  tools.py
finetuning_custom_llms/: config.py  finetuning_codellama.py  finetuning_codellama_with_reasoning.py  finetuning_falcon40b.py  finetuning_mistral22B.py  requirements.txt
ground_truth_generation/: README.md  add_ground_truth.py  dataset_juliet.py  filter.sh  parse.py
llvm/: CMakeLists.txt  README.md
llvm/HelloWorld/: HelloWorld.cpp
llvm/include/: helper.h
llvm/lib/: CMakeLists.txt  ControlDepGraph.cpp  GetIfCond.cpp  VariableDefinitionFinderPass.cpp  helper.cpp
prompt_pair_prepping/: data_prepping_all_facts_from_openai.py  dataset.py  fine_tuning_training_data.jsonl  llm_triage.py  repository_manager.py  tools.py
